コードを修正
小数点以下切り上げが切り下げになっている問題を修正

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         }
         function decimalPointCalculate(value, decimalPoint){
             if(decimalPoint === 'ceil'){
-                // return value.ceil()
+                return value.ceil()
                 return value.floor()
             }
             if(decimalPoint === 'floor'){
